refactor: reorganize assets and update references

--- a/concept-mockup.html
+++ b/concept-mockup.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Adventure Log — Concept Mockup</title>
-<link rel="icon" type="image/svg+xml" href="log-svgrepo-com.svg"/>
+<link rel="icon" type="image/svg+xml" href="assets/icons/log-svgrepo-com.svg"/>
 <style>
 :root{
   color-scheme:light;
@@ -464,7 +464,7 @@ header{
   <aside class="sidebar">
     <section class="card character-card">
       <div class="avatar-ring">
-        <img src="squelch.png" alt="Illustrated portrait of Squelch"/>
+        <img src="assets/images/characters/squelch.png" alt="Illustrated portrait of Squelch"/>
       </div>
       <div class="char-meta">
         <div class="badge-line">
